--- a/index.html
+++ b/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Hello World !</h1>
+
+    <script src = "index.js">
+        console.log('Hello, World ! from JS');  
+        // this is comment
+
+
+    </script>
 </body>
 </html>
